# ece6460_project_ideas

./: README.md
camera_lidar_project/: CMakeLists.txt  package.xml  setup.py
camera_lidar_project/cfg/: CameraLidarFusion.cfg
camera_lidar_project/launch/: camera_lidar_fusion.launch  mono_camera_driver.launch
camera_lidar_project/rviz/: rviz_config.rviz
camera_lidar_project/src/: CameraLidarFusion.cpp  CameraLidarFusion.hpp  camera_lidar_fusion.cpp
camera_lidar_project/src/camera_lidar_project/: pub_camera_info.py
camera_lidar_project/yaml/: camera_info.yaml  sensor_tf_config.yaml  sensor_tf_configs.yaml
dataset_playback/: CMakeLists.txt  package.xml
dataset_playback/launch/: dash_cam.launch  dataset_playback.launch  radar.launch  stereo_cameras.launch  traffic_cam.launch
dataset_playback/rviz/: dataset_playback.rviz
dataset_playback/yaml/: sensor_tf_config.yaml
intersection_sim_project/: CMakeLists.txt  README.md  package.xml
intersection_sim_project/launch/: sim_launch.launch
intersection_sim_project/rviz/: simulation.rviz
intersection_sim_project/urdf/: intersection_world_model.urdf.xacro
intersection_sim_project/worlds/: intersection_world.world
intersection_sim_project/yaml/: intersection_world_route_attributes.yaml  intersection_world_route_map.yaml  intersection_world_scenario.yaml  intersection_world_sim_params.yaml
lidar_slam_project/: CMakeLists.txt  README.md  package.xml
lidar_slam_project/launch/: build_map.launch  lidar_localization.launch
lidar_slam_project/rviz/: build_map.rviz  lidar_localization.rviz
lidar_slam_project/scripts/: initial_pose.bash  save_map.bash
sensor_fusion_projects/: CMakeLists.txt  README.md  package.xml
sensor_fusion_projects/launch/: camera_lidar_fusion.launch  radar_lidar_fusion.launch
sensor_fusion_projects/rviz/: camera_lidar.rviz  radar_lidar.rviz
sensor_fusion_projects/src/: LidarObjProjection.cpp  LidarObjProjection.hpp  lidar_obj_projection.cpp
stereo_camera_project/: CMakeLists.txt  package.xml  setup.py
stereo_camera_project/launch/: stereo_camera_cal.launch  stereo_camera_driver.launch
stereo_camera_project/rviz/: stereo_test.rviz
stereo_camera_project/yaml/: left_camera_info.yaml
traffic_sim_project/: CMakeLists.txt  README.md  package.xml
traffic_sim_project/launch/: sim_launch.launch
traffic_sim_project/rviz/: simulation.rviz
traffic_sim_project/urdf/: oval_world_model.urdf.xacro
traffic_sim_project/worlds/: oval_world.world
traffic_sim_project/yaml/: oval_world_route_attributes.yaml  oval_world_route_map.yaml  oval_world_scenario.yaml  oval_world_sim_params.yaml
