<?xml version="1.0"?>
<package format="2">
  <name>lidar_slam_project</name>
  <version>0.0.0</version>
  <description>
    Starting point for a project based on LIDAR SLAM
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
