<?xml version="1.0"?>
<package format="2">
  <!--
  [Required] The name of the package goes in the <name> tag
  -->
  <name>stereo_camera_project</name>
  
  <!--
  [Required] The following tags are required, but are only
             meaningful when releasing binaries into the
             ROS buildfarm
  -->
  <version>0.0.0</version>
  <description>
    Starting point for a project based on stereo camera processing
  </description>
  <license>BSD</license>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  
  <!--
  [Required] Make this package depend on the catkin build tool
  -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!--
  [Required if using C++] Make this package depend on the roscpp libraries
  -->
<!--   <depend>roscpp</depend> -->
  <depend>rospy</depend>
</package>
